k8s/orderservice-sql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderservice-sql
  namespace: distributed-microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderservice-sql
  template:
    metadata:
      labels:
        app: orderservice-sql
    spec:
      containers:
        - name: orderservice-sql
          image: distributedmicroservices-orderservice-sql:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
