k8s/productservice-sql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productservice-sql
  namespace: distributed-microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productservice-sql
  template:
    metadata:
      labels:
        app: productservice-sql
    spec:
      containers:
        - name: productservice-sql
          image: distributedmicroservices-productservice-sql:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
