k8s/apigateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apigateway
  namespace: distributed-microservices
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: apigateway
