k8s/productservice-sql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: productservice-sql
  namespace: distributed-microservices
spec:
  selector:
    app: productservice-sql
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
